Delete any partially written file after failing to create simple disk_cache fake index.

R=morlovich@chromium.org

Bug: 894982
Change-Id: Ic3c5ee9923bbd3ade6c0a269416684094d25dc43
Reviewed-on: https://chromium-review.googlesource.com/c/1278906
Reviewed-by: Maks Orlovich <morlovich@chromium.org>
Commit-Queue: Ben Kelly <wanderview@chromium.org>
Cr-Commit-Position: refs/heads/master@{#599714}
Former-commit-id: c00fa4683c3ef1a51cd5ce21ca024f2173283710